feat(SpringSecurityApp): авторизация на уровне адресов